[test] Check in CI that gcc version in env-vars.sh matches build-gcc.sh

--- a/scripts/CI/yml/lint.yml
+++ b/scripts/CI/yml/lint.yml
@@ -44,6 +44,12 @@ check-pre-commit-hooks:
         - if [ $(wc -l < out) -ne 0 ]; then exit 1 ;fi
     allow_failure: true
 
+check-env-vars:
+    stage: lint
+    script:
+        - python3 ./scripts/CI/check-env-vars-version.py
+    allow_failure: true
+
 pre-commit:
     stage: lint
     script:
