[fix] Disable private import error in pyright to use Gitlab API

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -20,5 +20,6 @@
     "reportInvalidStringEscapeSequence":true,
     "reportCallInDefaultInitializer":true,
     "reportUnnecessaryCast":true,
+    "reportPrivateImportUsage":false,
     "pythonPlatform": "Linux"
 }
