--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,7 +36,7 @@ repos:
           - id: forbid-binary
 
     - repo: https://github.com/psf/black
-      rev: 21.12b0
+      rev: 22.1.0
       hooks:
           - id: black
 
