--- a/cmake_utils/tests.cmake.in
+++ b/cmake_utils/tests.cmake.in
@@ -3,3 +3,6 @@ file(COPY ${CMAKE_SOURCE_DIR}/options.yml
 
 file(COPY ${CMAKE_SOURCE_DIR}/scripts/tests/test_sanitizers.sh
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/tests/)
+
+file(COPY ${CMAKE_SOURCE_DIR}/scripts/tests/test_dirty_scans.sh
+  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/tests/)
