--- a/scripts/CI/yml/release-test.yml
+++ b/scripts/CI/yml/release-test.yml
@@ -104,3 +104,199 @@ release_test_gc:
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
     needs: [release_build_gcc]
+
+release_test_dirty_scans_small:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_small$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+release_test_dirty_scans_medium:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_medium$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+release_test_dirty_scans_large:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_large$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+
+release_test_dirty_scans_smalld:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_smalld$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+
+release_test_dirty_scans_mediumd:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_mediumd$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+
+release_test_dirty_scans_larged:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_larged$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+release_test_dirty_scans_smallp:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_smallp$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+release_test_dirty_scans_mediump:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_mediump$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+release_test_dirty_scans_largep:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_largep$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+
+release_test_dirty_scans_smalldp:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_smalldp$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+release_test_dirty_scans_mediumdp:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_mediumdp$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
+
+release_test_dirty_scans_largedp:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    tags:
+        - kubernetes
+    script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_largedp$
+        - cd ..;cd ..
+        - ./scripts/CI/destroy_mbbd.sh
+    needs: [release_build_gcc]
