[fix] Fail CI if compilers emit warnings

--- a/scripts/CI/yml/debug-build.yml
+++ b/scripts/CI/yml/debug-build.yml
@@ -3,7 +3,7 @@ debug_build_gcc:
     stage: debug_build
     script:
         - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Debug
+        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DTREAT_WARNINGS_AS_ERRORS=True
         - make all
     needs: []
 
@@ -11,7 +11,7 @@ debug_build_clang:
     stage: debug_build
     script:
         - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DTREAT_WARNINGS_AS_ERRORS=True
         - make all
     needs: []
 
