--- a/scripts/CI/yml/debug-test.yml
+++ b/scripts/CI/yml/debug-test.yml
@@ -14,7 +14,7 @@ test_surrogates:
     script:
         - make SurrogateTUsTest;cd tests/Surrogates;
         - ./SurrogateTUsTest
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 
 test_options:
@@ -24,7 +24,7 @@ test_options:
     script:
         - make test_options;cd tests;
         - ./test_options
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 test_sanitizers:
     image: carvicsforth/ubuntu_carv:latest
@@ -34,7 +34,7 @@ test_sanitizers:
         - cmake .. -DUSE_SANITIZER=Address
         - make test_sanitizers;cd tests;
         - ./test_sanitizers.sh
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_ycsb_larged:
     image: carvicsforth/arch_carv:latest
@@ -45,7 +45,7 @@ debug_test_ycsb_larged:
     script:
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_larged$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_ycsb_large:
     image: carvicsforth/arch_carv:latest
@@ -56,7 +56,7 @@ debug_test_ycsb_large:
     script:
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_large$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_ycsb_mediumd:
     image: carvicsforth/arch_carv:latest
@@ -67,7 +67,7 @@ debug_test_ycsb_mediumd:
     script:
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_mediumd$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_ycsb_medium:
     image: carvicsforth/arch_carv:latest
@@ -78,7 +78,7 @@ debug_test_ycsb_medium:
     script:
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_medium$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_ycsb_smalld:
     image: carvicsforth/arch_carv:latest
@@ -89,7 +89,7 @@ debug_test_ycsb_smalld:
     script:
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_smalld$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_ycsb_small:
     image: carvicsforth/arch_carv:latest
@@ -100,7 +100,7 @@ debug_test_ycsb_small:
     script:
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_small$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_gc:
     image: carvicsforth/arch_carv:latest
@@ -112,7 +112,7 @@ debug_test_gc:
         - make test_gc;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_gc$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_dirty_scans_small:
     image: carvicsforth/arch_carv:latest
@@ -124,8 +124,7 @@ debug_test_dirty_scans_small:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_small$
-        - cd ..;cd ..
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_dirty_scans_medium:
     image: carvicsforth/arch_carv:latest
@@ -137,7 +136,7 @@ debug_test_dirty_scans_medium:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_medium$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_dirty_scans_large:
     image: carvicsforth/arch_carv:latest
@@ -149,7 +148,7 @@ debug_test_dirty_scans_large:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_large$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 
 debug_test_dirty_scans_smalld:
@@ -162,7 +161,7 @@ debug_test_dirty_scans_smalld:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_smalld$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 
 debug_test_dirty_scans_mediumd:
@@ -175,7 +174,7 @@ debug_test_dirty_scans_mediumd:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_mediumd$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 
 debug_test_dirty_scans_larged:
@@ -188,7 +187,7 @@ debug_test_dirty_scans_larged:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_larged$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_dirty_scans_smallp:
     image: carvicsforth/arch_carv:latest
@@ -200,7 +199,7 @@ debug_test_dirty_scans_smallp:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_smallp$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_dirty_scans_mediump:
     image: carvicsforth/arch_carv:latest
@@ -212,7 +211,7 @@ debug_test_dirty_scans_mediump:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_mediump$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_dirty_scans_largep:
     image: carvicsforth/arch_carv:latest
@@ -224,7 +223,7 @@ debug_test_dirty_scans_largep:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_largep$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 
 debug_test_dirty_scans_smalldp:
@@ -237,7 +236,7 @@ debug_test_dirty_scans_smalldp:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_smalldp$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_dirty_scans_mediumdp:
     image: carvicsforth/arch_carv:latest
@@ -249,7 +248,7 @@ debug_test_dirty_scans_mediumdp:
         - make test_dirty_scans;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_mediumdp$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_dirty_scans_largedp:
     image: carvicsforth/arch_carv:latest
@@ -271,7 +270,7 @@ debug_simple_test_delete:
         - make simple_test_delete;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^simple_test_delete$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_leaf_root_delete_get_scan:
     image: carvicsforth/arch_carv:latest
@@ -283,4 +282,4 @@ debug_leaf_root_delete_get_scan:
         - make test_leaf_root_delete_get_scan;make kv_format.parallax;cd tests;
         - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_leaf_root_delete_get_scan$
-    needs: [debug_build_gcc]
+    needs: [debug_build_gcc, debug_build_clang]
