--- a/scripts/CI/yml/release-build.yml
+++ b/scripts/CI/yml/release-build.yml
@@ -3,7 +3,7 @@ release_build_gcc:
     stage: release_build
     script:
         - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Release
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DTREAT_WARNINGS_AS_ERRORS=True
         - make all
     needs: []
 
@@ -11,6 +11,6 @@ release_build_clang:
     stage: release_build
     script:
         - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DTREAT_WARNINGS_AS_ERRORS=True
         - make all
     needs: []
