--- a/cmake_utils/check-compiler-flags.cmake.in
+++ b/cmake_utils/check-compiler-flags.cmake.in
@@ -28,6 +28,21 @@ if(WNULL_DEREFERENCE)
   string(APPEND CMAKE_C_FLAGS " -Wnull-dereference")
 endif()
 
+check_c_compiler_flag("-Wunused-local-typedefs" UNUSED_LOCAL_TYPEDEFS)
+if(UNUSED_LOCAL_TYPEDEFS)
+  string(APPEND CMAKE_C_FLAGS " -Wunused-local-typedefs")
+endif()
+
+check_c_compiler_flag("-Wunused-macros" UNUSED_MACRO)
+if(UNUSED_MACRO)
+  string(APPEND CMAKE_C_FLAGS " -Wunused-macros")
+endif()
+
+check_c_compiler_flag("-Wparentheses" PARENTHESES)
+if(PARENTHESES)
+  string(APPEND CMAKE_C_FLAGS " -Wparentheses")
+endif()
+
 check_c_compiler_flag("-fprefetch-loop-arrays" PREFETCH_LOOP_ARRAYS)
 if(PREFETCH_LOOP_ARRAYS)
   string(APPEND CMAKE_C_FLAGS " -fprefetch-loop-arrays")
