--- a/scripts/CI/yml/debug-test.yml
+++ b/scripts/CI/yml/debug-test.yml
@@ -1,10 +1,17 @@
 ---
+.debug_build_commands: &debug_build_commands
+    before_script:
+        - ./scripts/CI/create_mbbd.sh
+        - mkdir -p build;cd build
+        - cmake ..
+    after_script:
+        - ./scripts/CI/destroy_mbbd.sh
+
 test_surrogates:
     image: carvicsforth/ubuntu_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     script:
-        - mkdir -p build;cd build
-        - cmake ..
         - make SurrogateTUsTest;cd tests/Surrogates;
         - ./SurrogateTUsTest
     needs: [debug_build_gcc]
@@ -13,9 +20,8 @@ test_surrogates:
 test_options:
     image: carvicsforth/ubuntu_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     script:
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_options;cd tests;
         - ./test_options
     needs: [debug_build_gcc]
@@ -33,330 +39,248 @@ test_sanitizers:
 debug_test_ycsb_larged:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_larged$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_ycsb_large:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_large$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_ycsb_mediumd:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_mediumd$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_ycsb_medium:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_medium$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_ycsb_smalld:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_smalld$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_ycsb_small:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
         - ctest -R ^test_small$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_gc:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_gc;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_gc$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_dirty_scans_small:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_small$
         - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_dirty_scans_medium:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_medium$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_dirty_scans_large:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_large$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 
 debug_test_dirty_scans_smalld:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_smalld$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 
 debug_test_dirty_scans_mediumd:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_mediumd$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 
 debug_test_dirty_scans_larged:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_larged$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_dirty_scans_smallp:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_smallp$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_dirty_scans_mediump:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_mediump$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_dirty_scans_largep:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_largep$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 
 debug_test_dirty_scans_smalldp:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_smalldp$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_dirty_scans_mediumdp:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_dirty_scans_mediumdp$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_test_dirty_scans_largedp:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_dirty_scans;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
         - ctest -R ^test_dirty_scans_largedp$
 
 debug_simple_test_delete:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make simple_test_delete;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^simple_test_delete$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
 
 debug_leaf_root_delete_get_scan:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
+    <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
         - make test_leaf_root_delete_get_scan;make kv_format.parallax;cd tests;
-        - ./mkfs.sh /tmp/kv_store.dat 128
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
         - ctest -R ^test_leaf_root_delete_get_scan$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
     needs: [debug_build_gcc]
