[refactor] Reduce the size of the slot array from 4 to 2 bytes
This will reduce significantly amplification for workloads that small
KV pairs dominate.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,8 +133,9 @@ string(
 string(
   APPEND
   CMAKE_C_FLAGS
-  " -Wimplicit-function-declaration -Wshadow -pedantic -pedantic-errors -Wmisleading-indentation"
+  " -Wimplicit-function-declaration -Wshadow -pedantic -pedantic-errors -Wmisleading-indentation -pipe"
 )
+string(APPEND CMAKE_CXX_FLAGS " -pipe")
 include(cmake_utils/check-compiler-flags.cmake.in)
 
 set(DEVICE_PATH $ENV{NVME0})
