--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -74,8 +74,9 @@ if(BUILD_TESTING)
            COMMAND $<TARGET_FILE:simple_test_delete> --file=${FILEPATH}
                    --num_of_kvs=1000000)
 
-  add_executable(test_leaf_root_delete_get_scan test_leaf_root_delete_get_scan.c
-                                                arg_parser.c)
+  add_executable(
+    test_leaf_root_delete_get_scan test_leaf_root_delete_get_scan.c
+                                   arg_parser.c ../lib/common/common.c)
   target_link_libraries(test_leaf_root_delete_get_scan "${PROJECT_NAME}"
                         ${DEPENDENCIES})
   add_test(NAME test_leaf_root_delete_get_scan
