--- a/cmake_utils/tests.cmake.in
+++ b/cmake_utils/tests.cmake.in
@@ -1,8 +1,8 @@
-file(COPY ${CMAKE_SOURCE_DIR}/options.yml
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/options.yml
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/tests/)
 
-file(COPY ${CMAKE_SOURCE_DIR}/scripts/tests/test_sanitizers.sh
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/scripts/tests/test_sanitizers.sh
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/tests/)
 
-file(COPY ${CMAKE_SOURCE_DIR}/scripts/tests/test_dirty_scans.sh
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/scripts/tests/test_dirty_scans.sh
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/tests/)
