[refactor] Use parallax_SOURCE_DIR cached variable as project root dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ option(DISABLE_LOGGING
        OFF)
 # Set a default build type if none was specified
 set(default_build_type "Release")
-if(EXISTS "${CMAKE_SOURCE_DIR}/.git")
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.git")
   set(default_build_type "Debug")
 endif()
 
@@ -52,7 +52,7 @@ include(cmake_utils/tests.cmake.in)
 include(cmake_utils/tracer.cmake.in)
 
 if(RUN_IWYU STREQUAL "ON")
-  file(COPY ${CMAKE_SOURCE_DIR}/scripts/CI/check-iwyu-output.py
+  file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/scripts/CI/check-iwyu-output.py
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 endif()
 
@@ -125,7 +125,7 @@ endif()
 set(DEPENDENCIES log yaml libbloom)
 
 include_directories(${CMAKE_BINARY_DIR})
-include_directories(${CMAKE_SOURCE_DIR}/utilities)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/utilities)
 
 if(TREAT_WARNINGS_AS_ERRORS)
   set(CMAKE_C_FLAGS " -Werror ${CMAKE_C_FLAGS}")
