[feat] Add new index node api, implementation, and test
Define and implement an index node api that abstracts the index node
implementation. New index node design is similar to the dynamic leaf.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -29,6 +29,7 @@ set(LIB_C_SOURCE_FILES
     allocator/djb2.c
     api/parallax.c
     btree/btree.c
+    btree/index_node.c
     btree/compaction_daemon.c
     btree/dynamic_leaf.c
     btree/gc.c
